add the intro image

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
 	
 	<link rel="stylesheet" href="css/leaflet.css">
 	<link rel="stylesheet" href="css/style.css">
+	    
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -24,6 +30,7 @@
 <div class="row">	
 
 <button id="play"  class="glyphicon glyphicon-play .btn btn-success" onclick='playButtonPress()'></button>
+
 <div id="slider"  style="margin-left: 60px; margin-right: 25px;" ></div>
 </div>
 </br>
